# mirage-core

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  README.md  docker-compose.yml  go.mod  go.sum  index.html  stats.json
.github/workflows/: deploy.yml  publish-dataset.yml  update-stats.yml
bridge/: Dockerfile  __init__.py  config.py  db.py  enrich.py  requirements.txt  schema_adapter.py  worker.py
cmd/api/: main.go
cmd/mirage/: main.go
config/: hostkey  hostkey.pub  prometheus.yml
data/geo/: SOURCE.md
dataset/latest/: REPORT.md  stats_summary.json
ml/: pyproject.toml
ml/mirage/: __init__.py
ml/mirage/analysis/: __init__.py  session_stats.py  timing.py
ml/mirage/data/: __init__.py  bait.py  loader.py  schema.py
ml/mirage/deception/: __init__.py  actions.py  environment.py  policy.py  train.py
ml/mirage/intel/: __init__.py  classifier.py  features.py  ingest.py  mitre.py  pipeline.py  stix.py  summarize.py  synthetic.py  taxonomy.py
ml/mirage/models/: __init__.py  embedding.py  trajectory.py
ml/mirage/reid/: __init__.py  adversarial.py  augment.py  data.py  dataset.py  evaluate.py  fingerprint.py  loss.py  model.py  train.py
ml/mirage/tokenizer/: __init__.py  normalize.py  tokenizer.py
ml/mirage/training/: __init__.py  augment.py  dataset.py  objective.py  schedule.py  train.py
ml/mirage/viz/: __init__.py  tool_signature.py  visualize.py
scripts/: export_dataset.py  generate_hostkey.ps1  generate_hostkey.sh  generate_report.py  geo_lookup.py
tests/: conftest.py  test_db.py  test_enrich.py  test_schema_adapter.py
(+11 files in other folders)
